# gonova-asr

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  PROJECT_README.md  QUICKSTART.md  README.md  SIP_INTEGRATION.md  stt_pytorch.ipynb  tts_pytorch.ipynb
configs/: config-stt-en-hf.toml  config-stt-en_fr-hf-lowmem.toml  config-stt-en_fr-hf.toml  config-tts.toml
deployment/: deploy.sh  install-prerequisites.sh  stop.sh
scripts/: stt_evaluate_on_dataset.py  stt_from_file_mlx.py  stt_from_file_pytorch.py  stt_from_file_rust_server.py  stt_from_file_with_prompt_pytorch.py  stt_from_mic_mlx.py  stt_from_mic_rust_server.py  tts_mlx.py  tts_mlx_streaming.py  tts_pytorch.py  tts_pytorch_streaming.py  tts_rust_server.py
services/health-check/: Cargo.toml
services/health-check/src/: main.rs
stt-rs/: Cargo.toml
stt-rs/src/: main.rs
web-client/: client.js  index.html
