[package]
name = "kyutai-stt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
candle = { version = "0.9.1",  package = "candle-core" }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.4.12", features = ["derive"] }
hf-hub = "0.4.3"
kaudio = "0.2.1"
moshi = "0.6.1"
sentencepiece = "0.11.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
metal = ["candle/metal", "candle-nn/metal"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

